# my-fitness-plan

./: .gitignore  AGENTS.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/tests/: test_health.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
