[project]
name = "my-fitness-plan-backend"
version = "0.1.0"
description = "FastAPI backend for the MyFitnessPlan general wellness application."
readme = "../README.md"
requires-python = ">=3.14,<3.15"
dependencies = []

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true
