[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "my-fitness-plan-backend"
version = "0.1.0"
description = "FastAPI backend for the MyFitnessPlan general wellness application."
requires-python = ">=3.14,<3.15"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.17,<2",
    "pytest>=8.4,<10",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
