[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "my-fitness-plan-backend"
version = "0.1.0"
description = "FastAPI backend for the MyFitnessPlan general wellness application."
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.139,<1",
    "pydantic>=2.13,<3",
    "uvicorn>=0.51,<1",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.7,<3",
    "mypy>=1.17,<2",
    "pytest>=8.4,<10",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
